# jira-dependency-tree

./: .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  LICENSE-Notice.txt  LICENSE.txt  README.org  ava.config.cjs  cypress.config.ts  index.html  loader.js  package.json  playwright.config.ts  pnpm-lock.yaml  recorder.json  rome.json  stylelint.config.cjs  tailwind.config.cjs  tsconfig.build.json  tsconfig.json  vite.config.js
.storybook/: main.ts  preview-head.html  preview.ts
assets/css/: root.css  (+9 more)
cypress/: tsconfig.json
e2e/: 10_url-paste.spec.ts  1_open.cy.ts  1_open.spec.ts  2_user-configuration.cy.ts  2_user-configuration.spec.ts  3_import-issues.spec.ts  3_project-information.spec.ts  4_load-issues.spec.ts  4_storage.spec.ts  5_cycle.spec.ts  6_search.spec.ts  7_relation-editor.spec.ts  8_graph-operation.spec.ts  9_issue-set.spec.ts  _support.ts  tsconfig.json
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.build
server/cdk/: .gitignore  package.json  pnpm-lock.yaml
server/cdk/lib/: cdk-stack.ts
server/src/: api_type.rs  error.rs  issue.rs  jira_issue_request.rs  jira_link_request.rs  jira_project_request.rs  jira_projects_request.rs  jira_request.rs  jira_search_request.rs  jira_suggestion_request.rs  jira_url.rs  lib.rs  main.rs
server/tests/: autocompletedata.json  board.json  issue.json  issue_types.json  jira_issue_request_test.rs  jira_link_request_test.rs  jira_project_request_test.rs  jira_projects_request_test.rs  jira_request_test.rs  jira_search_request.rs  jira_suggestion_request_test.rs  lib_test.rs  project.json  projects.json  sprints.json  status_categories.json  statuses.json  sub-tasks.json  suggestions.json
server/tests/fixtures/: issue.json  issue_one.json
src/: app.tsx  dependencies.ts  env.ci.ts  env.ts  environment.ts  index.ts  index.tsx  issue-loader.ts  mock-data.ts  mock-worker.ts  project-loader.ts  project.ts  registrar-context.ts  twind.config.cjs  type.ts  util.ts
test/: dependency-registrar.test.ts  environment.test.ts  helper.ts  jsdom-setup.ts  project.test.ts
(+500 files in other folders)
