[package]
name = "jira-issue-loader"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
base64 = "0.21.4"
isahc = {version = "1.7.2", default-features = true, features = ["json"] }
lambda_http = { version = "0.6.2", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.6.1"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2.4.1"

[dev-dependencies]
httpmock = "0.6.8"
